WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161250
Fix the !ENABLE(WEB_TIMING) build
https://bugs.webkit.org/show_bug.cgi?id=161250
Summary
Fix the !ENABLE(WEB_TIMING) build
Csaba Osztrogonác
Reported
2016-08-26 09:17:06 PDT
In file included from ../../Source/WebCore/css/CSSFontSelector.cpp:44:0: ../../Source/WebCore/loader/cache/CachedResourceLoader.h:143:5: error: 'ResourceTimingInformation' does not name a type
Attachments
Patch
(2.25 KB, patch)
2016-08-26 09:48 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2016-08-26 09:48:29 PDT
Created
attachment 287113
[details]
Patch
WebKit Commit Bot
Comment 2
2016-08-26 11:00:32 PDT
Comment on
attachment 287113
[details]
Patch Clearing flags on attachment: 287113 Committed
r205028
: <
http://trac.webkit.org/changeset/205028
>
WebKit Commit Bot
Comment 3
2016-08-26 11:00:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug