Fix the !ENABLE(WEB_TIMING) build https://bugs.webkit.org/show_bug.cgi?id=161250

Reviewed by Alex Christensen.

* loader/SubresourceLoader.cpp:
(WebCore::SubresourceLoader::didFinishLoading):
* loader/cache/CachedResourceLoader.h:
(WebCore::CachedResourceLoader::resourceTimingInformation):


Canonical link: https://commits.webkit.org/179404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205028 268f45cc-cd09-0410-ab3c-d52691b4dbfc